# pykeycloak-client

./: .license-policy.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  mcp_server.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  workflow.yml
docs/: api-reference.md  index.md  mcp.md  quickstart.md
docs/models/: payloads.md  queries.md
docs/services/: auth.md  authz-permission.md  authz-policy.md  authz-resource.md  authz-scope.md  authz.md  clients.md  roles.md  sessions.md  uma.md  users.md  well-known.md
examples/: _common.py  auth.py  impersonate.py  permissions.py  policies.py  resources.py  roles.py  sessions.py  sso.py  uma.py  users.py  users_crud.py
src/pykeycloak/: dependencies.py
src/pykeycloak/core/: clients.py  exceptions.py  headers.py  helpers.py  protocols.py  settings.py  token_manager.py  validator.py
src/pykeycloak/providers/: providers.py  queries.py
src/pykeycloak/services/: representations.py  services.py
src/pykeycloak_client/: __init__.py  dependencies.py  pykeycloak.py
src/pykeycloak_client/core/: clients.py  constants.py  enums.py  helpers.py  logger.py  mapper.py  protocols.py  realm.py  response.py  sanitizer.py  token_manager.py  types.py  urls.py
src/pykeycloak_client/core/validations/: uuid.py
src/pykeycloak_client/providers/: __init__.py  _auth.py  _authz.py  _base.py  _clients.py  _roles.py  _sessions.py  _users.py  payloads.py  providers.py  queries.py
src/pykeycloak_client/services/: representations.py
tests/: conftest.py
tests/integration/: conftest.py  test_smoke_keycloak.py
tests/unit/: test_pykeycloak.py
tests/unit/core/: test_clients.py  test_dependencies.py  test_enums.py  test_exceptions.py  test_headers.py  test_helpers.py  test_logger.py  test_mapper.py  test_realm.py  test_response.py  test_sanitizer.py  test_settings.py  test_token_auto_refresher.py  test_token_manager.py  test_urls.py  test_validations.py  test_validator.py
tests/unit/providers/: conftest.py  test_auth_provider.py  test_authz_providers.py  test_base.py  test_clients_provider.py  test_payloads.py  test_providers_factory.py  test_queries.py  test_roles_provider.py  test_sessions_provider.py  test_users_provider.py
tests/unit/services/: test_services_unit.py
