[project]
name = "pykeycloak-client"
version = "0.8.1"
description = "Async Keycloak client with automated token management"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Anton 'Tony' Nazarov", email = "tonynazarov+dev@gmail.com" },
]
maintainers = [
    { name = "Anton 'Tony' Nazarov", email = "tonynazarov+dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
keywords = ["keycloak", "oauth", "openid", "authentication", "authorization", "async", "client"]

dependencies = [
    "httpx[http2]>=0.28.0,<0.29.0",
    "mcp[cli]>=1.27.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "PYI", # flake8-pyi (типизация)
]
ignore = [
    "E501", # Line length (delegated to Black / Ruff Format)
    "B008", # Function calls in argument defaults (convenient for FastAPI-style DI)
    "B010",
    "B009",
    "PYI013", # Allow setattr in stub files (needed for decorators)
    "UP037", # Quoted annotations (useful for circular imports)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests against a real Keycloak instance",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "security" },
]
lint = [
    "black>=25.1.0",
    "ruff>=0.9.0",
    "ty>=0.0.13",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]
security = [
    "pip-audit>=2.9.0",
]
